--- a/docMaker_web/index.html
+++ b/docMaker_web/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/fixed.css">
 </head>
 <body data-spy="scroll" data-target="#navbarResponsive">
+
 <!---Home--->
 <div id="home">
+
     <!--Navegação-->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="#"><img src="img/docMaker2.png"></a>
@@ -19,7 +21,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="#navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                        <a class="nav-link" href="#home">Home</a>
