inserção de formulário

--- a/docMaker_web/index.html
+++ b/docMaker_web/index.html
@@ -55,7 +55,7 @@
         <div class="caption text-center">
             <h1>Bem-vindo ao DocMaker!</h1>
             <h3>Chega de deixar para depois a documentação que você pode fazer hoje!</h3>
-            <a href="#docmaker" class="btn btn-outline-light btn-lg">COMECE AGORA!</a>
+            <a href="./form.html" class="btn btn-outline-light btn-lg">COMECE AGORA!</a>
         </div>
     <!--Fim da Landingpage-->
     
